src/tests/krate/publish/snapshots/crates_io__tests__krate__publish__basics__new_krate-2.snap
---
source: src/tests/krate/publish/basics.rs
expression: crates
snapshot_kind: text
---
[
  {
    "name": "foo_new",
    "vers": "1.0.0",
    "deps": [],
    "cksum": "270bbe1624abd766746bf9938b791fadd88e7e0135339510837e11b45e167350",
    "features": {},
    "yanked": false
  }
]
