src/tests/krate/publish/snapshots/crates_io__tests__krate__publish__basics__new_krate.snap
---
source: src/tests/krate/publish/basics.rs
expression: response.json()
snapshot_kind: text
---
{
  "crate": {
    "badges": [],
    "categories": null,
    "created_at": "[datetime]",
    "default_version": "1.0.0",
    "description": "description",
    "documentation": null,
    "downloads": 0,
    "exact_match": false,
    "homepage": null,
    "id": "foo_new",
    "keywords": null,
    "links": {
      "owner_team": "/api/v1/crates/foo_new/owner_team",
      "owner_user": "/api/v1/crates/foo_new/owner_user",
      "owners": "/api/v1/crates/foo_new/owners",
      "reverse_dependencies": "/api/v1/crates/foo_new/reverse_dependencies",
      "version_downloads": "/api/v1/crates/foo_new/downloads",
      "versions": "/api/v1/crates/foo_new/versions"
    },
    "max_stable_version": "1.0.0",
    "max_version": "1.0.0",
    "name": "foo_new",
    "newest_version": "1.0.0",
    "recent_downloads": null,
    "repository": null,
    "updated_at": "[datetime]",
    "versions": null,
    "yanked": false
  },
  "warnings": {
    "invalid_badges": [],
    "invalid_categories": [],
    "other": []
  }
}
