src/tests/krate/publish/snapshots/crates_io__tests__krate__publish__basics__new_krate_twice.snap
---
source: src/tests/krate/publish/basics.rs
expression: response.json()
---
{
  "crate": {
    "badges": [],
    "categories": null,
    "created_at": "[datetime]",
    "default_version": "2.0.0",
    "description": "2.0.0 description",
    "documentation": null,
    "downloads": 0,
    "exact_match": false,
    "homepage": null,
    "id": "foo_twice",
    "keywords": null,
    "links": {
      "owner_team": "/api/v1/crates/foo_twice/owner_team",
      "owner_user": "/api/v1/crates/foo_twice/owner_user",
      "owners": "/api/v1/crates/foo_twice/owners",
      "reverse_dependencies": "/api/v1/crates/foo_twice/reverse_dependencies",
      "version_downloads": "/api/v1/crates/foo_twice/downloads",
      "versions": "/api/v1/crates/foo_twice/versions"
    },
    "max_stable_version": "2.0.0",
    "max_version": "2.0.0",
    "name": "foo_twice",
    "newest_version": "2.0.0",
    "recent_downloads": null,
    "repository": null,
    "updated_at": "[datetime]",
    "versions": null
  },
  "warnings": {
    "invalid_badges": [],
    "invalid_categories": [],
    "other": []
  }
}
