src/tests/krate/publish/snapshots/crates_io__tests__krate__publish__basics__new_krate_twice_alt-2.snap
---
source: src/tests/krate/publish/basics.rs
expression: crates
---
[
  {
    "name": "foo_twice",
    "vers": "2.0.0",
    "deps": [],
    "cksum": "d6e88a7d30b9e5c3d268ede9a9937b62815e45a06fd2c572d602e0705ab6513d",
    "features": {},
    "yanked": false
  },
  {
    "name": "foo_twice",
    "vers": "0.99.0",
    "deps": [],
    "cksum": "45b0b19cd0280034e07820789d9bb6e4016526eba85c75fc697d49ec99fd2550",
    "features": {},
    "yanked": false
  }
]
