src/tests/krate/publish/snapshots/crates_io__tests__krate__publish__basics__new_krate_twice_alt-3.snap
---
source: src/tests/krate/publish/basics.rs
expression: crates
---
[
  {
    "name": "foo_twice",
    "vers": "2.0.0",
    "deps": [],
    "cksum": "7e71c271648114db81fa41450dd8d4d50c35622d3630e65c4f8211948bdf83f3",
    "features": {},
    "yanked": false
  },
  {
    "name": "foo_twice",
    "vers": "0.99.0",
    "deps": [],
    "cksum": "99ef473e84e6bede426d948d4dca03d79a64acb51511ffcbeb11d253505c9968",
    "features": {},
    "yanked": false
  }
]
